--- a/paper/Main.tex
+++ b/paper/Main.tex
@@ -306,7 +306,7 @@ cAlg = depthAlg <+> (widthAlg <+> wsAlg)
 \end{verbatim}
 
 \section{Extensibility in Both Dimensions}
-So far we've only talked about extensibility in one dimension: 
+So far we've only talked about extensibility in one dimension: \textit{// to be continuted...}
 
 \subsection{F-Algebras}
 We've shown that the type class
