MRM template for paper sketching

--- a/paper/Main.tex
+++ b/paper/Main.tex
@@ -146,7 +146,7 @@ instance Circuit Depth where
   stretch xs x = x
 \end{verbatim}
 
-To state that the semantic domain type i represents is part of a larger collection of types, we use the following type class
+To state that the semantic domain that type i represents is part of a larger collection of types, we use the following type class
 
 \begin{verbatim}
 class i :<: e where
