Up to MRM (extensibility)

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -107,6 +107,10 @@
 
 \input{sections/Introduction}
 
+\input{sections/Scans}
+
+\input{sections/FAlg}
+
 \input{sections/Overview}
 
 \input{sections/ComposableAlg}
