Related work & Conclusion (for FYP report)

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -179,9 +179,16 @@ Acknowledgments, if needed.
   1990.
 
 \bibitem{oliveira15}
-  Oliveira, B.C.d.S., Mu, Shin-Cheng and You, Shu-Hung
-  Modular Reifiable Matching: A List-of-Functors Approach to Two-Level Types
+  Oliveira, B.C.d.S., Mu, Shin-Cheng and You, Shu-Hung.
+  Modular Reifiable Matching: A List-of-Functors Approach to Two-Level Types.
   February 2015.
+
+\bibitem{bahr15}
+  Bahr, Patrick and Axelsson, Emil.
+  Generalising Tree Traversals to DAGs.
+  \emph{Proceedings of the 2015 Workshop on Partial Evaluation and Program Manipulation},
+  pages 27-38.
+  2015
 
 
 
