Improve composition operator for MRM approach

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -191,6 +191,12 @@ Acknowledgments, if needed.
   pages 27-38.
   2015
 
+\bibitem{oliveira13}
+  Oliveira, B.C.d.S., Storm, Tijs van der, Loh, Alex and Cook, William R.
+  Feature-Oriented Programming with Object Algebra
+  \emph{ECOOP'13 Proceedings of the 27th European conference on Object-Oriented Programming},
+  pages 27-51.
+  2013
 
 
 \end{thebibliography}
