Proposed title some code

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -80,8 +80,9 @@
 \titlebanner{banner above paper title}        % These are ignored unless
 \preprintfooter{short description of paper}   % 'preprint' option specified.
 
-\title{Composable Algebra with Dependencies}
-%\subtitle{A List-of-Functors Approach to Two-Level Types}
+\title{Modular and Dependent Interpretations for Shallow Embeddings}
+%\title{Composable Algebra with Dependencies}
+
 
 \authorinfo{Draft}
            {}
