--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -92,7 +92,7 @@
 
 \begin{abstract}
 Compositionality is a desirable characteristic for the semantics of
-DSLs. In functional programming folds are used to enforce
+DSLs. In functional programming folds can be used to enforce
 compositionality. However folds make certain compositional
 interpretations hard to express modularly. This pearl presents a
 simple technique that allows non-trivial, but compositional
