--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -50,7 +50,7 @@
 \def\commentend{\}}
 
 \newcommand\SM[1]{\textcolor{red!70!yellow}{[SM: #1]}}
-\newcommand\BO[1]{\textcolor{green!70!black}{[BO: #1]}}
+\newcommand\bruno[1]{\textcolor{green!70!black}{[BO: #1]}}
 \newcommand\SH[1]{\textcolor{blue!70!gray}{[SH: #1]}}
 
 \newcommand\name{{\bf DSL}\xspace}
