Format & small changes

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -53,6 +53,8 @@
 \newcommand\bruno[1]{\textcolor{green!70!black}{[BO: #1]}}
 \newcommand\SH[1]{\textcolor{blue!70!gray}{[SH: #1]}}
 
+\newcommand\emma[1]{\textcolor{magenta}{[EM: #1]}}
+
 \newcommand\name{{\bf DSL}\xspace}
 \newcommand\delete[1]{}
 
@@ -187,6 +189,12 @@ Acknowledgments, if needed.
   \emph{International Conference on Functional Programming}.
   2014.
 
+\bibitem{blelloch90}  
+  Blelloch, Guy E..
+  Prefix sums and their applications
+  \emph{Technical Report}
+  1990
+
 \bibitem{fokkinga90}
   Fokkinga, Maarten M.
   Tupling and mutumorphisms.
@@ -210,7 +218,6 @@ Acknowledgments, if needed.
   \emph{ECOOP'13 Proceedings of the 27th European conference on Object-Oriented Programming},
   pages 27-51.
   2013
-
 
 \end{thebibliography}
 
