--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -20,7 +20,7 @@
 %-----------------------------------------------------------------------------
 
 
-\documentclass[nocopyrightspace]{sigplanconf}
+\documentclass{jfp1}
 
 % The following \documentclass options may be useful:
 
@@ -31,8 +31,8 @@
 
 \usepackage{xcolor}
 \usepackage{xspace}
-\usepackage{amsmath}
-\usepackage{amsthm}
+%\usepackage{amsmath}
+%\usepackage{amsthm}
 \usepackage{doubleequals}
 \usepackage{comment}
 \usepackage{url}
@@ -62,10 +62,10 @@
 \setlength{\pdfpageheight}{\paperheight}
 \setlength{\pdfpagewidth}{\paperwidth}
 
-\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country} 
-\copyrightyear{20yy} 
-\copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
-\doi{nnnnnnn.nnnnnnn}
+%\conferenceinfo{CONF 'yy}{Month d--d, 20yy, City, ST, Country} 
+%\copyrightyear{20yy} 
+%\copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
+%\doi{nnnnnnn.nnnnnnn}
 
 % Uncomment one of the following two, if you are not going for the 
 % traditional copyright transfer agreement.
@@ -77,16 +77,20 @@
                                   % (paid open-access papers, 
                                   % short abstracts)
 
-\titlebanner{banner above paper title}        % These are ignored unless
-\preprintfooter{short description of paper}   % 'preprint' option specified.
+%\titlebanner{banner above paper title}        % These are ignored unless
+%\preprintfooter{short description of paper}   % 'preprint' option specified.
 
 \title{Expressive, Modular and Compositional Embedded DSLs}
 \subtitle{(Functional Pearl)}
 
+\author[P. Boya and B. C. d. S. Oliveira]
+        {PENG BOYA and BRUNO C. d. S. OLIVEIRA\\
+         The University of Hong Kong, Hong Kong\\
+         \email{bruno@cs.hku.hk}}\bruno{Fix author info later!}
 
-\authorinfo{Draft}
-           {}
-           {}
+%\authorinfo{Draft}
+%           {}
+%           {}
 
 \maketitle
 
@@ -173,7 +177,7 @@ Acknowledgments, if needed.
 %\bibliography{mrm}
 
 \begin{thebibliography}{}
-\softraggedright
+%\softraggedright
 
 \bibitem{sheard04}
   Sheard, Tim and Pasalic, Emir.
