Refactoring early parts of the paper

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -82,13 +82,13 @@
 %\titlebanner{banner above paper title}        % These are ignored unless
 %\preprintfooter{short description of paper}   % 'preprint' option specified.
 
-\title{Expressive, Modular and Compositional Embedded DSLs}
+\title{Compositionality and Modularity Together at Last!}
 \subtitle{(Functional Pearl)}
 
 \author[P. Boya and B. C. d. S. Oliveira]
         {PENG BOYA and BRUNO C. d. S. OLIVEIRA\\
          The University of Hong Kong, Hong Kong\\
-         \email{bruno@cs.hku.hk}}\bruno{Fix author info later!}
+         \email{bruno@cs.hku.hk}}
 
 %\authorinfo{Draft}
 %           {}
