--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -85,8 +85,8 @@
 \title{Compositionality and Modularity Together at Last!}
 \subtitle{(Functional Pearl)}
 
-\author[P. Boya and B. C. d. S. Oliveira]
-        {PENG BOYA and BRUNO C. d. S. OLIVEIRA\\
+\author[B. Peng and B. C. d. S. Oliveira]
+        {BOYA PENG and BRUNO C. d. S. OLIVEIRA\\
          The University of Hong Kong, Hong Kong\\
          \email{bruno@cs.hku.hk}}
 
@@ -131,6 +131,8 @@ on top of the domain specific language for parallel prefix circuits.
 %keyword1, keyword2
 
 \input{sections/Introduction}
+
+\input{sections/Technique}
 
 \input{sections/Scans}
 
