--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -138,9 +138,9 @@ on top of the domain specific language for parallel prefix circuits.
 
 \input{sections/FAlg}
 
-\input{sections/Overview}
+%\input{sections/Overview}
 
-\input{sections/ComposableAlg}
+\input{sections/MultipleAlg}
 
 \input{sections/DependentAlg}
 
