Section 4.3, 4.4 (multiple & dependent interpretation)

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -144,7 +144,7 @@ on top of the domain specific language for parallel prefix circuits.
 
 \input{sections/DependentAlg}
 
-\input{sections/Extensibility}
+%\input{sections/Extensibility}
 
 \section{Other representations of algebra}
 \label{sec: other-alg}
