Context sensitive interpretation (part)

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -144,6 +144,8 @@ on top of the domain specific language for parallel prefix circuits.
 
 \input{sections/DependentAlg}
 
+\input{sections/Context} 
+
 %\input{sections/Extensibility}
 
 \section{Other representations of algebra}
