More text (up to Context)

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -39,6 +39,7 @@
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \graphicspath{ {images/} }
+\usepackage{dirtytalk}
 
 %% for comments
 \input{Preamble}
@@ -136,7 +137,9 @@ using folds.
 
 \input{sections/TypeClassAlg}
 
-\input{sections/RecordAlg}
+%\input{sections/RecordAlg}
+
+\input{sections/Grammar}
 
 %\input{sections/RelatedWork}
 
@@ -205,6 +208,13 @@ Acknowledgments, if needed.
   \emph{ECOOP'13 Proceedings of the 27th European conference on Object-Oriented Programming},
   pages 27-51.
   2013
+
+\bibitem{gibbons98}
+  Gibbons, Jeremy and Jones, Geraint.
+  The under-appreciated unfold.
+  \emph{International Conference on Functional Programming},
+  pages 273-279.
+  Baltimore, Maryland, September 1998
 
 \end{thebibliography}
 
