Code for data type a la carte

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -133,7 +133,7 @@ using folds.
 
 \input{sections/Context} 
 
-%\input{sections/Extensibility}
+\input{sections/DTC}
 
 \input{sections/TypeClassAlg}
 
