Finishing up data type a la carte

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -216,6 +216,13 @@ Acknowledgments, if needed.
   pages 273-279.
   Baltimore, Maryland, September 1998
 
+\bibitem{swierstra08}
+  Swierstra, Wouter.
+  Datatypes \`a la Carte.
+  \emph{Journal of Functional Programming},
+  18(4):423-436,
+  2008
+
 \end{thebibliography}
 
 
