Text for Grammars

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -223,6 +223,19 @@ Acknowledgments, if needed.
   18(4):423-436,
   2008
 
+\bibitem{oliveira12}
+  Olivera, B.C.d.S, and Cook, William R.
+  Functional Programming with Structured Graphs.
+  \emph{ICFP '12 Proceedings of the 17th ACM SIGPLAN international conference on Functional programming},
+  Pages 77-88,
+  2012
+
+\bibitem{chlipala08}
+  Chlipala, A.
+  Parametric higher-order abstract syntax for mechanized semantics.
+  \emph{ICFP’08}, 
+  2008.
+
 \end{thebibliography}
 
 
