--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -135,7 +135,7 @@ using folds.
 
 \input{sections/DTC}
 
-\input{sections/TypeClassAlg}
+%\input{sections/TypeClassAlg}
 
 %\input{sections/RecordAlg}
 
@@ -162,8 +162,10 @@ Acknowledgments, if needed.
 
 % The bibliography should be embedded for final submission.
 
-%\bibliography{mrm}
+\bibliography{mrm}
 
+
+\begin{comment}
 \begin{thebibliography}{}
 %\softraggedright
 
@@ -237,7 +239,7 @@ Acknowledgments, if needed.
   2008.
 
 \end{thebibliography}
-
+\end{comment}
 
 
 \end{document}
