Revising first few setctions

--- a/dAlg/mrm.tex
+++ b/dAlg/mrm.tex
@@ -83,7 +83,7 @@
 %\titlebanner{banner above paper title}        % These are ignored unless
 %\preprintfooter{short description of paper}   % 'preprint' option specified.
 
-\title{Compositionality and Modularity Together at Last!}
+\title{Folding Non-Trivial Interpretations of Domain-Specific Languages Modularly!}
 \subtitle{(Functional Pearl)}
 
 \author[B. Peng and B. C. d. S. Oliveira]
